* vertical align settings on full width fix

--- a/assets/scss/partials/sections/_base.scss
+++ b/assets/scss/partials/sections/_base.scss
@@ -104,19 +104,19 @@
 
 @media (min-width: 768px) {
 
-  .ewf-valign--top .container > .row {
+  .ewf-valign--top .ewf-section__content > div > .row {
     display: flex;
     align-items: flex-start;
 	flex-wrap: wrap;
   }
 
-  .ewf-valign--middle .container > .row {
+  .ewf-valign--middle .ewf-section__content > div > .row {
     display: flex;
     align-items: center; 
 	flex-wrap: wrap;
   }
 
-  .ewf-valign--bottom .container > .row {
+  .ewf-valign--bottom .ewf-section__content > div > .row {
     display: flex;
     align-items: flex-end;
 	flex-wrap: wrap;
